--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-
+    <!--**********style **********-->
     <style>
        .navbar-brand img {
             max-height: 80px; 
@@ -49,9 +49,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="#">Acceuil</a></li>
-                <li class="nav_item"><a class="nav-link" href="#">Destinations</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Destinations</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Visites & Activités</a></li>
-                <li class="nav_item"><a class="nav-link" href="#">Festivales & Evènements</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Festivales & Evènements</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Cuisine traditionnelle</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
               </ul>
